--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Mi proyecto
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-avatar id="myAvatar">
+    <img src="../../assets/img/buho.png">
+  </ion-avatar>
+  <strong><h1 id="nombre">Mi primera APP</h1></strong>
+  <ion-item>
+    <ion-label position="floating">Digite Nombre</ion-label>
+    <ion-input id="myinput" [(ngModel)]="myNombre"></ion-input>
+  </ion-item>
+  <ion-button expand="full" (click)="enviar()">Enviar</ion-button>
 </ion-content>
