--- a/src/app/datos/datos.page.html
+++ b/src/app/datos/datos.page.html
@@ -8,6 +8,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-fab horizontal="end" vertical="bottom">
     <ion-fab-button >
       <ion-icon  name="add"></ion-icon>
