--- a/src/app/datos/datos.page.html
+++ b/src/app/datos/datos.page.html
@@ -12,7 +12,7 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-fab horizontal="end" vertical="bottom">
-    <ion-fab-button >
+    <ion-fab-button (click)="insert()">
       <ion-icon  name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
