--- a/src/app/datos/insert-datos/insert-datos.page.html
+++ b/src/app/datos/insert-datos/insert-datos.page.html
@@ -54,7 +54,7 @@
     <ion-button
       type="submit"
       [disabled]="form.invalid"
-    > Enviar
+    > {{isUpdate? 'Actualizar':'Crear'}}
     </ion-button>
   </form>
   <!-- <ion-header collapse="condense">
